--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Prototipo</title>
-
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	    <link rel="stylesheet" href="estilos.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	</head>
 	<body >
 		<header class="header">
-				<div class="encabezado_logo">
-					<img class="logo" src="imgs\logo-davivienda.png">
-				</div>
-				<div class="encabezado_salir">
-					<a href="#">
-						<img class="salir" src="imgs\boton-x.png">
-					</a>
-				</div>
+			<div class="encabezado_logo">
+				<img class="logo" src="imgs\logo-davivienda.png">
+			</div>
+			<div class="encabezado_salir">
+            	<a href="#">
+					<img class="salir" src="imgs\boton-x.png">
+				</a>
 			</div>
 		</header>
-		<div id="contenido">
+		<main id="contenido" class="card-panel transparent">
+
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -45,8 +46,55 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
-		</div>
-		
+			
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</main>
+		<footer class="page-footer white">			
+			<div class="linkF">
+				<a href="#">
+					<i class="material-icons black-text">business_center</i>
+					<p id="uno">Abrir productos en línea</p>
+				</a>
+			</div>
+			<div class="linkF">
+				<a href="#">
+					<i class="material-icons black-text">question_answer</i>
+					<p id="dos">Atención el Línea</p>
+				</a>
+			</div>
+			<div class="linkF">
+				<a href="#">
+					<i class="material-icons red-text">view_comfy</i>
+					<p id="tres">Apps</p>
+				</a>
+			</div>
+			<div class="linkF">
+				<a href="#">
+					<i class="material-icons black-text">place</i>
+					<p id="cuatro">Puntos de Atención</p>
+				</a>
+			</div>
+			<div class="linkF">
+				<a href="#">
+					<i class="material-icons black-text	">menu</i>
+					<p id="cinco">Más...</p>
+				</a>
+			</div>
+		</footer>
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
