--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			</form>
 		</div>
 		<div class="container-fluid bg-danger centered">
-			<div style="height: 50%;">
+			<div class="">
 				<img src="imgs/icon.png" class="img-fluid">
 			</div>
 			<div class="text-center text-white" style="padding: 2%">
